--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -21,6 +21,7 @@
 	},
 	"devDependencies": {
 		"@nodebase/ts-config": "workspace:*",
+		"@nodebase/types": "workspace:*",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
