--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@nodebase/types",
 	"version": "1.0.0",
+	"type": "module",
 	"description": "",
 	"devDependencies": {
 		"@nodebase/ts-config": "workspace:*"
