cofigure db package

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,17 +1,19 @@
 {
 	"name": "@nodebase/db",
 	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
+	"type": "module",
 	"scripts": {
+		"build": "tsc -b",
 		"db:push": "pnpm exec drizzle-kit push",
 		"db:generate": "pnpm exec drizzle-kit generate",
 		"db:migrate": "pnpm exec drizzle-kit migrate"
 	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"packageManager": "pnpm@10.28.1",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"default": "./dist/index.js"
+		}
+	},
 	"dependencies": {
 		"dotenv": "^17.2.3",
 		"drizzle-orm": "^0.45.1",
