--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,11 +1,12 @@
 {
 	"extends": "@nodebase/ts-config/node.json",
 	"compilerOptions": {
+		"composite": true,
 		"declaration": true,
 		"declarationMap": true,
 		"outDir": "./dist",
-		"rootDir": "."
+		"rootDir": "./src"
 	},
-	"include": ["src", "drizzle.config.ts"],
+	"include": ["src"],
 	"exclude": ["node_modules", "dist"]
 }
