--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -3,14 +3,13 @@
 	"version": "1.0.0",
 	"description": "",
 	"scripts": {
-		"build": "tsc"
-	},
-	"devDependencies": {
-		"@nodebase/ts-config": "workspace:*"
+		"build": "tsc",
+		"dev": "tsc --watch"
 	},
 	"exports": {
 		".": {
-			"types": "./src/index.ts",
+			"import": "./src/index.js",
+			"types": "./dist/index.d.ts",
 			"default": "./dist/index.js"
 		}
 	},
@@ -18,6 +17,10 @@
 	"author": "",
 	"license": "ISC",
 	"packageManager": "pnpm@10.28.1",
+	"devDependencies": {
+		"@nodebase/ts-config": "workspace:*",
+		"@types/node": "^25.0.10"
+	},
 	"dependencies": {
 		"zod": "^4.3.6"
 	}
