--- a/packages/schemas/tsconfig.json
+++ b/packages/schemas/tsconfig.json
@@ -1,11 +1,12 @@
 {
-	"extends": "@nodebase/ts-config/base.json",
+	"extends": "@nodebase/ts-config/node.json",
 	"compilerOptions": {
 		"composite": true,
 		"declaration": true,
 		"declarationMap": true,
 		"outDir": "./dist",
-		"rootDir": "./src"
+		"rootDir": "./src",
+		"baseUrl": "."
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "dist"]
