--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "@nodebase/ts-config/base.json",
 	"compilerOptions": {
+		"composite": true,
 		"declaration": true,
 		"declarationMap": true,
 		"outDir": "./dist",
