add turborepo and configs

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 dist/
 .env
 notes.md
+.turbo
 
 # Logs
 logs
@@ -15,6 +16,7 @@ node_modules
 dist
 dist-ssr
 *.local
+*.tsbuildinfo
 
 # Editor directories and files
 .vscode/*
