--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,9 +5,9 @@
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
-		"dev": "node --watch ./src/index.ts ",
-		"build": "tsc",
-		"start": "node ./dist/index.js"
+		"dev": "tsx --watch -r tsconfig-paths/register src/index.ts",
+		"build": "tsc && tsc-alias",
+		"typecheck": "tsc --noEmit"
 	},
 	"keywords": [],
 	"author": "",
@@ -26,6 +26,7 @@
 		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.6",
 		"@types/node": "^25.0.10",
+		"tsconfig-paths": "^4.2.0",
 		"tsx": "^4.21.0",
 		"typescript": "^5.9.3"
 	}
