--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
 	"scripts": {
 		"build:db": "pnpm --filter @nodebase/db build",
 		"predev": "pnpm build:db && docker-compose up -d",
-		"dev": "pnpm -r run dev"
+		"dev": "turbo run dev",
+		"build": "turbo run build",
+		"typecheck": "turbo run typecheck",
+		"clean": "turbo run clean"
 	},
 	"keywords": [],
 	"author": "",
@@ -13,6 +16,8 @@
 	"packageManager": "pnpm@10.28.1",
 	"devDependencies": {
 		"@biomejs/biome": "2.3.11",
+		"tsc-alias": "^1.8.16",
+		"turbo": "^2.8.0",
 		"typescript": "^5.9.3"
 	}
 }
