--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"dev": "tsx --watch -r tsconfig-paths/register src/index.ts",
 		"build": "tsc && tsc-alias",
+		"start": "node dist/index.js",
 		"typecheck": "tsc --noEmit"
 	},
 	"keywords": [],
@@ -14,11 +15,15 @@
 	"license": "ISC",
 	"packageManager": "pnpm@10.28.1",
 	"dependencies": {
+		"@nodebase/db": "workspace:*",
+		"@nodebase/shared": "workspace:*",
+		"@types/pg": "^8.16.0",
 		"bcryptjs": "^3.0.3",
 		"cors": "^2.8.6",
 		"dotenv": "^17.2.3",
 		"express": "^5.2.1",
-		"nanoid": "^5.1.6"
+		"nanoid": "^5.1.6",
+		"pg": "^8.17.2"
 	},
 	"devDependencies": {
 		"@nodebase/ts-config": "workspace:*",
