--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,11 @@
 			"dependsOn": ["^build"],
 			"persistent": true,
 			"cache": false
+		},
+		"start": {
+			"dependsOn": ["^build"],
+			"persistent": true,
+			"cache": false
 		}
 	}
 }
