--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -4,8 +4,14 @@
 		"declaration": true,
 		"declarationMap": true,
 		"outDir": "./dist",
-		"rootDir": "./src"
+		"rootDir": "./src",
+		"baseUrl": ".",
+		"paths": { "@/*": ["./src/*"] }
 	},
 	"include": ["src"],
-	"exclude": ["node_modules", "dist"]
+	"exclude": ["node_modules", "dist"],
+	"references": [
+		{ "path": "../../packages/db/tsconfig.json" },
+		{ "path": "../../packages/shared/tsconfig.json" }
+	]
 }
