--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "tsc -w",
 		"build": "tsc && tsc-alias",
+		"start": "node dist/index.js",
 		"db:push": "pnpm exec drizzle-kit push",
 		"db:generate": "pnpm exec drizzle-kit generate",
 		"db:migrate": "pnpm exec drizzle-kit migrate"
