--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,14 +22,16 @@
 		"cors": "^2.8.6",
 		"dotenv": "^17.2.3",
 		"express": "^5.2.1",
+		"http-errors": "^2.0.1",
 		"nanoid": "^5.1.6",
-		"pg": "^8.17.2"
+		"pg": "^8.17.2",
+		"zod": "^4.3.6"
 	},
 	"devDependencies": {
 		"@nodebase/ts-config": "workspace:*",
-		"@nodebase/types": "workspace:*",
 		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.6",
+		"@types/http-errors": "^2.0.5",
 		"@types/node": "^25.0.10",
 		"tsconfig-paths": "^4.2.0",
 		"tsx": "^4.21.0",
