--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,11 +14,11 @@ services:
     ports:
       - "5432:5432"
     env_file:
-      - ./packages/db/.env
+      - ./.env
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-myapp}
+      POSTGRES_DB: ${POSTGRES_DB:-dev}
     volumes:
       - postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
