--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
 	"version": "1.0.0",
 	"description": "",
 	"scripts": {
-		"build:db": "pnpm --filter @nodebase/db build",
+		"build:db": "dotenv -e .env -- pnpm --filter @nodebase/db build",
 		"predev": "pnpm build:db && docker-compose up -d",
-		"dev": "turbo run dev",
-		"build": "turbo run build",
-		"start": "turbo run start",
+		"dev": "dotenv -e .env -- turbo run dev --env-mode=loose",
+		"build": "dotenv -e .env turbo run build --env-mode=loose",
+		"start": "dotenv -e .env turbo run start --env-mode=loose",
 		"typecheck": "turbo run typecheck",
 		"clean": "turbo run clean"
 	},
@@ -17,7 +17,9 @@
 	"packageManager": "pnpm@10.28.1",
 	"devDependencies": {
 		"@biomejs/biome": "2.3.11",
+		"dotenv-cli": "^11.0.0",
 		"tsc-alias": "^1.8.16",
+		"tsx": "^4.21.0",
 		"turbo": "^2.8.0",
 		"typescript": "^5.9.3"
 	}
