--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,7 +8,7 @@
 		"start": "node dist/index.js",
 		"db:push": "pnpm exec drizzle-kit push",
 		"db:generate": "pnpm exec drizzle-kit generate",
-		"db:migrate": "pnpm exec drizzle-kit migrate"
+		"db:migrate": "dotenv -e ../../.env -- drizzle-kit migrate"
 	},
 	"exports": {
 		".": {
