--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,34 +1,31 @@
 {
 	"name": "@nodebase/shared",
 	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
 	"type": "module",
+	"main": "./dist/index.js",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"scripts": {
-		"dev": "tsx --watch -r tsconfig-paths/register src/index.ts",
 		"build": "tsc && tsc-alias",
+		"dev": "tsx --watch -r tsconfig-paths/register src/index.ts",
 		"start": "node dist/index.js",
 		"typecheck": "tsc --noEmit"
 	},
 	"exports": {
 		".": {
-			"import": "./src/index.js",
 			"types": "./dist/index.d.ts",
+			"import": "./dist/index.js",
 			"default": "./dist/index.js"
 		}
 	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"packageManager": "pnpm@10.28.1",
 	"devDependencies": {
 		"@nodebase/ts-config": "workspace:*",
+		"@types/node": "^25.0.10",
 		"tsconfig-paths": "^4.2.0",
 		"tsx": "^4.21.0"
 	},
 	"dependencies": {
 		"@nodebase/db": "workspace:*",
-		"@types/node": "^25.0.10",
 		"zod": "^4.3.6"
 	}
 }
