--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,13 +17,16 @@
 	"dependencies": {
 		"@nodebase/db": "workspace:*",
 		"@nodebase/shared": "workspace:*",
+		"@types/multer": "^2.0.0",
 		"@types/pg": "^8.16.0",
 		"bcryptjs": "^3.0.3",
+		"cloudinary": "^2.9.0",
 		"cors": "^2.8.6",
 		"dotenv": "^17.2.3",
 		"express": "^5.2.1",
 		"http-errors": "^2.0.1",
 		"jsonwebtoken": "^9.0.3",
+		"multer": "^2.0.2",
 		"nanoid": "^5.1.6",
 		"pg": "^8.17.2",
 		"zod": "^4.3.6"
