--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -21,6 +21,7 @@
 	"devDependencies": {
 		"@nodebase/ts-config": "workspace:*",
 		"@types/node": "^25.0.10",
+		"ts-to-zod": "^5.1.0",
 		"tsconfig-paths": "^4.2.0",
 		"tsx": "^4.21.0"
 	},
