--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "tsc -w",
+		"dev": "tsc",
 		"build": "tsc -b  && tsc-alias",
 		"start": "node dist/index.js",
 		"db:push": "dotenv -e ../../.env -- drizzle-kit push",
