--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.2.4",
 		"@tailwindcss/vite": "^4.1.18",
+		"@tanstack/react-router": "^1.160.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.562.0",
@@ -21,6 +22,8 @@
 	},
 	"devDependencies": {
 		"@nodebase/ts-config": "workspace:*",
+		"@tanstack/react-router-devtools": "^1.160.0",
+		"@tanstack/router-plugin": "^1.160.0",
 		"@types/node": "^25.0.10",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
