--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,16 +9,22 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
+		"@hugeicons/react": "^1.1.5",
+		"@nodebase/shared": "workspace:*",
 		"@radix-ui/react-slot": "^1.2.4",
 		"@tailwindcss/vite": "^4.1.18",
 		"@tanstack/react-router": "^1.160.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.562.0",
+		"radix-ui": "^1.4.3",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"react-hook-form": "^7.71.1",
 		"tailwind-merge": "^3.4.0",
-		"tailwindcss": "^4.1.18"
+		"tailwindcss": "^4.1.18",
+		"zod": "^4.3.6"
 	},
 	"devDependencies": {
 		"@nodebase/ts-config": "workspace:*",
@@ -30,6 +36,7 @@
 		"@vitejs/plugin-react": "^5.1.1",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "~5.9.3",
-		"vite": "^7.2.4"
+		"vite": "^7.2.4",
+		"vite-plugin-svgr": "^4.5.0"
 	}
 }
