--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -6,7 +6,7 @@
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"scripts": {
-		"build": "tsc && tsc-alias",
+		"build": "tsc && tsc-alias -p tsconfig.json",
 		"dev": "tsx --watch -r tsconfig-paths/register src/index.ts",
 		"start": "node dist/index.js",
 		"typecheck": "tsc --noEmit"
