--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "@nodebase/ts-config/node.json",
 	"compilerOptions": {
 		"composite": true,
+		"skipLibCheck": false,
 		"declaration": true,
 		"declarationMap": true,
 		"outDir": "./dist",
