--- a/apps/client/components.json
+++ b/apps/client/components.json
@@ -12,11 +12,11 @@
 	},
 	"iconLibrary": "lucide",
 	"aliases": {
-		"components": "@/components",
+		"components": "@/src/components",
 		"utils": "@/lib/utils",
-		"ui": "@/components/ui",
+		"ui": "@/src/components/ui",
 		"lib": "@/lib",
-		"hooks": "@/hooks"
+		"hooks": "@/src/hooks"
 	},
 	"registries": {}
 }
