--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,14 +14,19 @@
 		"@nodebase/shared": "workspace:*",
 		"@radix-ui/react-slot": "^1.2.4",
 		"@tailwindcss/vite": "^4.1.18",
+		"@tanstack/react-query": "^5.90.21",
+		"@tanstack/react-query-devtools": "^5.91.3",
 		"@tanstack/react-router": "^1.160.0",
+		"axios": "^1.13.5",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.562.0",
+		"next-themes": "^0.4.6",
 		"radix-ui": "^1.4.3",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"react-hook-form": "^7.71.1",
+		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.18",
 		"zod": "^4.3.6"
