fix: biome ignore files issue and format components

--- a/biome.json
+++ b/biome.json
@@ -10,10 +10,10 @@
 		"ignoreUnknown": false,
 		"includes": [
 			"**",
-			"dist/**",
-			"!!.turbo",
-			"!db/drizzle",
-			"!!routeTree.gen.ts"
+			"!**/dist",
+			"!**/.turbo",
+			"!**/db/drizzle",
+			"!**/routeTree.gen.ts"
 		]
 	},
 	"formatter": {
