--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
+		"@hugeicons/core-free-icons": "^3.1.1",
 		"@hugeicons/react": "^1.1.5",
 		"@nodebase/shared": "workspace:*",
 		"@radix-ui/react-slot": "^1.2.4",
@@ -26,6 +27,7 @@
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"react-hook-form": "^7.71.1",
+		"react-resizable-panels": "^4.6.5",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.18",
